--- a/preview/index.html
+++ b/preview/index.html
@@ -13,9 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="https://cdn.dowebok.com/98/css/animate.min.css">
-    <script type="module" crossorigin src="/index.9a32fa0b.js"></script>
-    <link rel="modulepreload" href="/vendor.a16c96ac.js">
-    <link rel="stylesheet" href="/index.abf5f798.css">
+    <script type="module" crossorigin src="./index.9a32fa0b.js"></script>
+    <link rel="modulepreload" href="./vendor.a16c96ac.js">
+    <link rel="stylesheet" href="./index.abf5f798.css">
   </head>
   <body>
     <div id="app"></div>
