--- a/preview/index.html
+++ b/preview/index.html
@@ -13,9 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="https://cdn.dowebok.com/98/css/animate.min.css">
-    <script type="module" crossorigin src="/vue3-waterfall-plugin/preview/assets/index.05166bc9.js"></script>
-    <link rel="modulepreload" href="/vue3-waterfall-plugin/preview/assets/vendor.533521c7.js">
-    <link rel="stylesheet" href="/vue3-waterfall-plugin/preview/assets/index.696c1c48.css">
+    <script type="module" crossorigin src="https://heikaimu.github.io/vue3-waterfall-plugin/preview/assets/index.b3ef6e2d.js"></script>
+    <link rel="modulepreload" href="https://heikaimu.github.io/vue3-waterfall-plugin/preview/assets/vendor.66b30cc4.js">
+    <link rel="stylesheet" href="https://heikaimu.github.io/vue3-waterfall-plugin/preview/assets/index.2136f571.css">
   </head>
   <body>
     <div id="app"></div>
