--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: Yaowen Liu
+ * @Date: 2022-03-16 23:21:54
+ * @LastEditors: Yaowen Liu
+ * @LastEditTime: 2022-03-18 16:49:14
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,6 +11,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="/animate.min.css">
   </head>
   <body>
     <div id="app"></div>
