--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Yaowen Liu
  * @Date: 2022-03-16 23:21:54
  * @LastEditors: Yaowen Liu
- * @LastEditTime: 2022-03-18 16:49:14
+ * @LastEditTime: 2022-03-21 10:54:45
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +11,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link rel="stylesheet" href="/animate.min.css">
+    <!-- <link rel="stylesheet" href="/animate.min.css"> -->
   </head>
   <body>
     <div id="app"></div>
