--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Yaowen Liu
  * @Date: 2022-03-16 23:21:54
  * @LastEditors: Yaowen Liu
- * @LastEditTime: 2022-03-21 10:54:45
+ * @LastEditTime: 2022-03-24 14:22:19
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -10,11 +10,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <!-- <link rel="stylesheet" href="/animate.min.css"> -->
+    <title>Vue3瀑布流</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/example/main.ts"></script>
   </body>
 </html>
